--- a/src/style/month.scss
+++ b/src/style/month.scss
@@ -48,7 +48,16 @@
         width: 100%;
         height: 100%;
         display: grid;
+        grid-template-rows: 30px repeat(5, 1fr);
         grid-template-columns: repeat(7, 1fr);
+
+        @media screen and (max-width: 1700px) {
+            grid-template-rows: 25px repeat(5, 1fr);
+        }
+
+        @media screen and (max-width: 1160px) {
+            grid-template-rows: 20px repeat(5, 1fr);
+        }
 
         &__weekday {
             display: flex;
@@ -135,8 +144,7 @@
                 background-color: $color-40;
                 transform: scale(1.05);
                 border: none;
-                border-radius: 5px !important;
-                transition: transform 300ms ease-in-out;
+                border-radius: 5px;
 
                 .month__markup__day__number {
                     color: $color-80;
@@ -153,7 +161,6 @@
 
             &__number {
                 font-size: 28px;
-                pointer-events: none;
 
                 @media screen and (max-width: 1700px) {
                     font-size: 22px;
@@ -170,7 +177,6 @@
 
             &__lessons {
                 padding: 5px;
-                pointer-events: none;
 
                 @media screen and (max-width: 860px) {
                     padding: 4px 4px 0 0;
@@ -206,8 +212,6 @@
         font-size: 30px;
         color: $color-10;
         margin-top: 10px;
-        display: flex;
-        user-select: none;
 
         @media screen and (max-width: 1700px) {
             font-size: 22px;
@@ -225,13 +229,6 @@
         &__icon {
             margin: 0 10px;
             height: auto;
-            user-select: none;
-            transition: transform 250ms ease-in-out;
-            cursor: pointer;
-
-            &:hover {
-                transform: scale(1.2);
-            }
 
             @media screen and (max-width: 1700px) {
                 height: 14px;
@@ -317,13 +314,6 @@
                 justify-content: center;
             }
 
-            &__full {
-                align-self: center;
-                height: 0.5px;
-                width: 30%;
-                background-color: $color-10;
-            }
-
             &__container {
                 display: flex;
                 width: 100%;
@@ -336,18 +326,6 @@
 
                 &:last-child {
                   margin-bottom: 0;
-                }
-
-                &--empty {
-                    padding: 20px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-
-                    p:first-child {
-                        margin-bottom: 30px;
-                    }
                 }
             }
 
@@ -384,7 +362,6 @@
 
             &__group {
                 display: flex;
-                justify-content: center;
                 background: rgba($color-70, 0.2);
                 border-radius: 5px;
                 padding: 10px;
@@ -500,199 +477,4 @@
             }
         }
     }
-
-    &__popup {
-        position: absolute;
-        box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
-        border-radius: 5px;
-        background: $color-80;
-        width: 80%;
-        height: 70%;
-        padding: 10px;
-        display: flex;
-        flex-direction: column;
-        visibility: hidden;
-        opacity: 0;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        transition: opacity 250ms ease-in-out;
-
-        @media screen and (min-width: 860px) {
-            display: none;
-        }
-
-        &__date {
-            font-size: 22px;
-            text-transform: uppercase;
-            color: $color-20;
-        }
-
-        &__weekday {
-            font-size: 12px;
-            color: $color-60;
-        }
-
-        &__container {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 100%;
-        }
-
-        &__class {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-
-            &--sub {
-                width: 50%;
-            }
-
-            &--empty {
-                justify-content: center;
-            }
-
-            &__full {
-                align-self: center;
-                height: 0.5px;
-                width: 30%;
-                background-color: $color-10;
-            }
-
-            &__container {
-                display: flex;
-                width: 100%;
-                height: 25%;
-                margin-bottom: 5px;
-                justify-content: space-between;
-
-                &:last-child {
-                    margin-bottom: 0;
-                }
-
-                &--empty {
-                    padding: 20px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-
-                    p:first-child {
-                        margin-bottom: 30px;
-                    }
-                }
-            }
-
-            
-            &__subgroup {
-                font-size: 12px;
-                color: $color-10;
-
-                &__container {
-                    display: flex;
-                    justify-content: end;
-                    width: 100%;
-                    margin-bottom: 4px;
-                }
-            }
-
-            &__subgroups {
-                width: 93%;
-                display: flex;
-                justify-content: space-around;
-            }
-
-            &__group {
-                display: flex;
-                justify-content: center;
-                background: rgba($color-70, 0.2);
-                border-radius: 5px;
-                padding: 5px;
-                width: 94%;
-
-                &--red {
-                    background: rgba($color-40, 0.1);
-                }
-            }
-
-            &__divider {
-                width: 1px;
-                height: 100%;
-                background-color: $color-60;
-                margin: 0 5px;
-
-                &--light {
-                    background-color: $color-70;
-                }
-            }
-
-            &__empty {
-                height: 1px;
-                width: 30%;
-                background-color: $color-10;
-            }
-
-            &__name {
-                font-size: 13px;
-                color: $color-10;
-                text-align: center;
-            }
-
-            &__type {
-                font-size: 10px;
-                color: $color-20;
-                text-align: center;
-            }
-
-            &__professor {
-                font-size: 12px;
-                color: $color-10;
-                text-align: center;
-            }
-
-            &__place {
-                font-size: 12px;
-                color: $color-20;
-                text-align: center;
-
-                img {
-                    height: 8px;
-                }
-            }
-        }
-
-        &__time {
-            font-size: 12px;
-            width: 6%;
-            color: $color-10;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            margin-right: 10px;
-        }
-
-        &__close-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-            cursor: pointer;
-            border: none;
-            outline: none;
-            background: none;
-        }
-    }
-}
-
-.disable {
-    filter: blur(4px);
-    pointer-events: none;
-    user-select: none;
 }
