--- a/src/style/today.scss
+++ b/src/style/today.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: #F5F3F4;
+    background: $color-90;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     height: calc(100% - 185px);
@@ -75,17 +75,6 @@
         text-align: center;
         width: 100%;
         height: 100%;
-
-        &__empty {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            padding: 30px;
-
-            p:first-child {
-                margin-bottom: 30px;
-            }
-        }
 
         &--month {
             width: auto;
